my first paragraph

--- a/maongaIP.html
+++ b/maongaIP.html
@@ -1,2 +1,5 @@
 <!<!DOCTYPE html>
-<h1> hellow</h1>
+<h1>My Name Is Enoch Maonga</h1>
+<p>I have over 15 years experience in design work. Mostly with Illustrator,
+  photoshop, Adobe indesign and currently working on Software development.
+</P>
