--- a/maongaIP.html
+++ b/maongaIP.html
@@ -1,7 +1,7 @@
 <!<!DOCTYPE html>
 <link href="maonga.css" rel="stylesheet" type="text/css">
 <h1>My Name Is Enoch Maonga</h1>
-<p>I have over 15 years experience in design work. Mostly with Illustrator,
+<p content="width">I have over 15 years experience in design work. Mostly with Illustrator,
   photoshop, Adobe indesign and currently working on Software development.
 </P>
 <body>
