--- a/maongaIP.html
+++ b/maongaIP.html
@@ -1,11 +1,35 @@
 <!<!DOCTYPE html>
 <link href="maonga.css" rel="stylesheet" type="text/css">
 <h1>My Name Is Enoch Maonga</h1>
-<p content="width">I have over 15 years experience in design work. Mostly with Illustrator,
-  photoshop, Adobe indesign and currently working on Software development.
+<h3> 
+<nav>
+  <ul class="navbar">
+    <li><a href="#Home" class="nav">Home</a></li>
+    <li><a href="myworks.html" class="nav"> works</a></li>
+    <li><a href="#contacts" class="nav">contacts</a></li>
+    <li><a href="about.html" class="nav">about</a>
+  </ul>
+  <a href="Home" class="Home"></a>
+        <a href="works" class="my works"> </a>
+</nav>
+</h3>
+<div class="Home" id="Home">
+</div>
+<div class="works" id="works">
+</div>
+<div backgroundColor="green">
+
+  <link> <a href="/About Me"></a>
+
+<p>My name is Maonga Enoch. I am just relatively old. A young old folk who has just over 15 years experience in design work. I have interracted with most creative and design techniques, Mostly with pencil work, print, painting, ceramics and system based tools like; Illustrator,photoshop, Adobe indesign and currently working on Software development.
+  I am looking forward to become one of the greatest software developers around.
 </P>
 <body>
-  <div backgroundColor="green"> 
-    <img src="enoch.me.jpg">
-    </div>
+
+<p>
+<p class="contacts">
+  <h4> contacts</h4>
+  You can reach me on +254717688888, +254110000770; email:alsenservices@gmail.com
+</p>
+
 </body>
