--- a/maongaIP.html
+++ b/maongaIP.html
@@ -6,7 +6,7 @@
   <ul class="navbar">
     <li><a href="#Home" class="nav">Home</a></li>
     <li><a href="myworks.html" class="nav"> works</a></li>
-    <li><a href="#contacts" class="nav">contacts</a></li>
+    <li><a href="#Contacts" class="nav">contacts</a></li>
     <li><a href="about.html" class="nav">about</a>
   </ul>
   <a href="Home" class="Home"></a>
@@ -20,16 +20,16 @@
 <div backgroundColor="green">
 
   <link> <a href="/About Me"></a>
-
-<p>My name is Maonga Enoch. I am just relatively old. A young old folk who has just over 15 years experience in design work. I have interracted with most creative and design techniques, Mostly with pencil work, print, painting, ceramics and system based tools like; Illustrator,photoshop, Adobe indesign and currently working on Software development.
-  I am looking forward to become one of the greatest software developers around.
-</P>
-<body>
-
-<p>
-<p class="contacts">
-  <h4> contacts</h4>
-  You can reach me on +254717688888, +254110000770; email:alsenservices@gmail.com
+  <body>
+<p>My name is Maonga Enoch. I am just relatively old. A young old folk who has just over 15 years experience in design work.
+  </p>
+   <p>I have interracted with most creative and design techniques, Mostly with pencil work, print, painting, ceramics and system based tools like; Illustrator,photoshop, Adobe indesign and currently working on Software development. </p>
+      <p> I am looking forward to become one of the greatest software developers around.</p>
+  <div class="Contacts">
+    <h4>
+      <p> Contacts</h4> 
+      ________________________________________________________________________________________________________________________________________________________________________
+      
+    You can reach me on +254717688888, +254110000770; email:alsenservices@gmail.com </div>
 </p>
-
 </body>
