--- a/maongaIP.html
+++ b/maongaIP.html
@@ -25,6 +25,7 @@
       just over 16 years experience in Inventory Management and Design.I am a male
       aged 40 years, a fine art graduate from Kenyatta University.
     </p>
+    <div class="sidebar">
     <p>
     I have worked in two Organizations in my sixteen years career. I started
     off as an inventory specialist at Color Creations limited without any
@@ -32,6 +33,7 @@
     controller. With my education back ground in graphic arts, i wanted to know
     more in designing of websites and that is why I chose to take a class in
     programming.</p>
+  </div>
     <p>
    <p>I have interracted with most creative and design techniques, Mostly with
      pencil work, print, painting, ceramics and system based tools like;
