adding sidebar and floats

--- a/maongaIP.html
+++ b/maongaIP.html
@@ -21,10 +21,12 @@
 
   <link> <a href="/About Me"></a>
   <body>
+    <div class="sidebar0">
     <p>My name is Maonga Enoch. I am just relatively old. A young old folk who has
       just over 16 years experience in Inventory Management and Design.I am a male
       aged 40 years, a fine art graduate from Kenyatta University.
     </p>
+  </div>
     <div class="sidebar">
     <p>
     I have worked in two Organizations in my sixteen years career. I started
@@ -35,15 +37,17 @@
     programming.</p>
   </div>
     <p>
+  <div class="sidebar2">
    <p>I have interracted with most creative and design techniques, Mostly with
      pencil work, print, painting, ceramics and system based tools like;
      Illustrator,photoshop, Adobe indesign and currently working on Software
      development. </p>
+   </div>
       <p> I am looking forward to become one of the greatest software developers
         around.</p>
   <div class="Contacts">
     <h4>
-      <p> Contacts</h4>
+      <p></h4>
       ________________________________________________________________________________________________________________________________________________________________________
 
     You can reach me on +254717688888, +254110000770; email:alsenservices@gmail.com </div>
