--- a/maongaIP.html
+++ b/maongaIP.html
@@ -21,13 +21,13 @@
 
   <link> <a href="/About Me"></a>
   <body>
-    <div class="sidebar0">
+    <div class="box">
     <p>My name is Maonga Enoch. I am just relatively old. A young old folk who has
       just over 16 years experience in Inventory Management and Design.I am a male
       aged 40 years, a fine art graduate from Kenyatta University.
     </p>
   </div>
-    <div class="sidebar">
+    <div class="box2">
     <p>
     I have worked in two Organizations in my sixteen years career. I started
     off as an inventory specialist at Color Creations limited without any
@@ -37,14 +37,15 @@
     programming.</p>
   </div>
     <p>
-  <div class="sidebar2">
+  <div class="box3">
    <p>I have interracted with most creative and design techniques, Mostly with
      pencil work, print, painting, ceramics and system based tools like;
      Illustrator,photoshop, Adobe indesign and currently working on Software
      development. </p>
+     <p> I am looking forward to become one of the greatest software developers
+       around.</p>
    </div>
-      <p> I am looking forward to become one of the greatest software developers
-        around.</p>
+
   <div class="Contacts">
     <h4>
       <p></h4>
