changing background color to balck,changing contact color to white.

--- a/maongaIP.html
+++ b/maongaIP.html
@@ -48,9 +48,10 @@
 
   <div class="Contacts">
     <h4>
-      <p></h4>
       ________________________________________________________________________________________________________________________________________________________________________
 
-    You can reach me on +254717688888, +254110000770; email:alsenservices@gmail.com </div>
+    You can reach me on +254717688888, +254110000770; email:alsenservices@gmail.com
+  </h4>
+  </div>
 </p>
 </body>
