--- a/maongaIP.html
+++ b/maongaIP.html
@@ -10,7 +10,13 @@
     <li><a href="about.html" class="nav">About</a>
   </ul>
   <a href="Home" class="Home"></a>
-        <a href="works" class="my works"> </a>
+    <a href="works" class="my works"> </a>
+    <a href="#My projects">My projects</a>
+    <ul class="myprojects">
+      <li><img src="enoch 2020.jpg" alt="enoch" title="enoch" /> <br /><br />
+      <li><img src="IMG_20200204_192814.jpg" alt="enoch" title="enoch" /> <br /><br />
+        <li><img src="IMG_20200204_192335.jpg" alt="enoch" title="enoch" /> <br /><br />
+    </ul>
 </nav>
 </h3>
   <div class="Home" id="Home">
@@ -23,18 +29,20 @@
   <body>
     <div class="box">
     <p>My name is Maonga Enoch. I am just relatively old. A young old folk who has
-      just over 16 years experience in Inventory Management and Design.I am a male
-      aged 40 years, a fine art graduate from Kenyatta University.
+      just over 16 years experience in Inventory Management and graphic design.
+      I am a male aged 40 years, a fine art graduate from Kenyatta University,
+      a diploma in Supply chain management from Kenya Institute of Management
+      and now on my way to becoming a software developer.
     </p>
   </div>
     <div class="box2">
     <p>
     I have worked in two Organizations in my sixteen years career. I started
     off as an inventory specialist at Color Creations limited without any
-    previous experience. With this experience moved to Safaricom as a stock
-    controller. With my education back ground in graphic arts, i wanted to know
-    more in designing of websites and that is why I chose to take a class in
-    programming.</p>
+    previous experience. With the new experience in inventory management, I
+    moved to Safaricom as a stock controller. WMy education back ground in
+    graphic arts, i wanted to know more in designing of websites and that is
+    why I chose to take a class in programming.</p>
   </div>
     <p>
   <div class="box3">
@@ -45,6 +53,14 @@
      <p> I am looking forward to become one of the greatest software developers
        around.</p>
    </div>
+   <div>
+     <a name="my projects">projects</a>
+       <ul class="my projects">
+         <li> maongaIP.html
+           <li> eswa group.html
+             <li> my first webpage.html
+               <li> demo.html
+</div>
 
   <div class="Contacts">
     <h4>
