--- a/maongaIP.html
+++ b/maongaIP.html
@@ -12,11 +12,7 @@
   <a href="Home" class="Home"></a>
     <a href="works" class="my works"> </a>
     <a href="#My projects">My projects</a>
-    <ul class="myprojects">
-      <li><img src="enoch 2020.jpg" alt="enoch" title="enoch" /> <br /><br />
-      <li><img src="IMG_20200204_192814.jpg" alt="enoch" title="enoch" /> <br /><br />
-        <li><img src="IMG_20200204_192335.jpg" alt="enoch" title="enoch" /> <br /><br />
-    </ul>
+
 </nav>
 </h3>
   <div class="Home" id="Home">
@@ -53,15 +49,13 @@
      <p> I am looking forward to become one of the greatest software developers
        around.</p>
    </div>
-   <div>
-     <a name="my projects">projects</a>
-       <ul class="my projects">
-         <li> maongaIP.html
-           <li> eswa group.html
-             <li> my first webpage.html
-               <li> demo.html
-</div>
-
+<div>
+  <ul class="enoch"
+      <li><img src="IMG_20200204_192335.jpg" alt="enoch" title="painting" /> </li>
+      <li><img src="IMG_20200204_192814.jpg" alt="enoch" title="print" /> </li>
+      <li><img src="IMG_20200204_192106.jpg" alt="enoch" title="print" /> </li>
+      <li><img src="IMG_20200204_191934.jpg" alt="enoch" title="print" /> </li>
+      <li><img src="IMG_20200204_191513.jpg" alt="enoch" title="print" /> </li>
   <div class="Contacts">
     <h4>
       ________________________________________________________________________________________________________________________________________________________________________
