--- a/maongaIP.html
+++ b/maongaIP.html
@@ -11,8 +11,9 @@
   </ul>
   <a href="Home" class="Home"></a>
     <a href="works" class="my works"> </a>
-    <a href="#My projects">My projects</a>
-
+<div class="projects">
+    <a id="My projects">My projects</a>
+</div>
 </nav>
 </h3>
   <div class="Home" id="Home">
@@ -49,13 +50,25 @@
      <p> I am looking forward to become one of the greatest software developers
        around.</p>
    </div>
-<div>
-  <ul class="enoch"
-      <li><img src="IMG_20200204_192335.jpg" alt="enoch" title="painting" /> </li>
-      <li><img src="IMG_20200204_192814.jpg" alt="enoch" title="print" /> </li>
-      <li><img src="IMG_20200204_192106.jpg" alt="enoch" title="print" /> </li>
-      <li><img src="IMG_20200204_191934.jpg" alt="enoch" title="print" /> </li>
-      <li><img src="IMG_20200204_191513.jpg" alt="enoch" title="print" /> </li>
+   <div>
+     <a href="#My projects"></a>
+     <p>
+      <a href="#My projects">My projects</a>
+    <div class="enoch">
+      <img src="IMG_20200204_192814.jpg" alt="painting" style="width:100%">
+    </div>
+    <div class="enoch">
+      <img src="IMG_20200204_191934.jpg" alt="painting" style="width:100%">
+    </div>
+    <div class="enoch">
+      <img src="IMG_20200204_191513.jpg" alt="painting" style="width:100%">
+    </div>
+    <div class="enoch">
+      <img src="IMG_20200204_192156.jpg" alt="painting" style="width:100%">
+    </div>
+  </p>
+</div>
+</p>
   <div class="Contacts">
     <h4>
       ________________________________________________________________________________________________________________________________________________________________________
