--- a/maongaIP.html
+++ b/maongaIP.html
@@ -47,8 +47,7 @@
      pencil work, print, painting, ceramics and system based tools like;
      Illustrator,photoshop, Adobe indesign and currently working on Software
      development. </p>
-     <p> I am looking forward to become one of the greatest software developers
-       around.</p>
+     <p><span style="color:blue">My Hobbies:</span> Drawing, planting flowers, photography.</p>
    </div>
    <div>
      <a href="#My projects"></a>
