adding about and my projects

--- a/maongaIP.html
+++ b/maongaIP.html
@@ -5,14 +5,14 @@
 <nav>
   <ul class="navbar">
     <li><a href="#Home" class="nav">Home</a></li>
-    <li><a href="myworks.html" class="nav"> Works</a></li>
+    <li><a href="myworks.html" class="nav"> My projects</a></li>
     <li><a href="#Contacts" class="nav">Contacts</a></li>
     <li><a href="about.html" class="nav">About</a>
   </ul>
   <a href="Home" class="Home"></a>
-    <a href="works" class="my works"> </a>
-<div class="projects">
-    <a id="My projects">My projects</a>
+    <a href="works" class="My projects"> </a>
+<div class="Myprojects">
+  <a id="My projects">My projects</a>
 </div>
 </nav>
 </h3>
