adding project list

--- a/maongaIP.html
+++ b/maongaIP.html
@@ -65,6 +65,12 @@
     <div class="enoch">
       <img src="IMG_20200204_192156.jpg" alt="painting" style="width:100%">
     </div>
+    <div class="list">
+      <ol>
+        <li>maongalp.html</li>
+      <li>Eswa group.html</li>
+      <li>myfirst webpage.html</li>
+      <li>demo.html</li>
   </p>
 </div>
 </p>
