adding description to my list

--- a/maongaIP.html
+++ b/maongaIP.html
@@ -68,8 +68,12 @@
     <div class="list">
       <ol>
         <li>maongalp.html</li>
+        This is all about me.
+        <p> link:https://github.com/enochmaonga/enochmaonga/blob/main/maongalp.html</p>
       <li>Eswa group.html</li>
       <li>myfirst webpage.html</li>
+      This is my very first webpage. Created in October 2020.
+      <p>link: https://github.com/enochmaonga/my-projects/blob/main/my%20first%20webpage.html</p>
       <li>demo.html</li>
   </p>
 </div>
