--- a/about.html
+++ b/about.html
@@ -1,12 +1,17 @@
 <!<!DOCTYPE html>
 <link href="maonga.css" rel="stylesheet" type="text/css">
 <h1>My Name Is Enoch Maonga</h1>
-<h3> 
+<h3>
 
-  <link> 
-  <img src="enoch.me.jpg">
-<p content="width"> My name is Maonga Enoch. I am just relatively old. A young old folk who has just over 15 years experience in design work. I have interracted with most creative and design techniques, Mostly with pencil work, print, painting, ceramics and system based tools like; Illustrator,photoshop, Adobe indesign and currently working on Software development.
-  I am looking forward to become one of the greatest software developers around.
+  <link>
+  <img src="enoch 2020.jpg"/width:400px; height:400px;/>
+  <img src=enoch 2020.jpg"style="float:left; margin-right:10px; width:800px; height:800px; border:none;"
+   alt="enoch"title="Photo of Enoch Maonga/>
+<p> My name is Maonga Enoch. I am just relatively old. A young old folk who has
+  just over 16 years experience in Inventory Management and graphic design.
+  I am a male aged 40 years, a fine art graduate from Kenyatta University,
+  a diploma in Supply chain management from Kenya Institute of Management
+  and now on my way to becoming a software developer.
 </P>
 <body>
 
