adding span to the list

--- a/maongaIP.html
+++ b/maongaIP.html
@@ -67,14 +67,17 @@
     </div>
     <div class="list">
       <ol>
-        <li>maongalp.html</li>
+        <li><span style="color:blue">:Maongalp.html</span></li>
         This is all about me.
         <p> link:https://github.com/enochmaonga/enochmaonga/blob/main/maongalp.html</p>
-      <li>Eswa group.html</li>
+        <li><span style="color:blue">:Eswa group.html</span></li>
+      Some group website
+      <p> link:https://github.com/enochmaonga/enochmaonga/blob/main/Eswa%20Group.html</p>
       <li>myfirst webpage.html</li>
       This is my very first webpage. Created in October 2020.
       <p>link: https://github.com/enochmaonga/my-projects/blob/main/my%20first%20webpage.html</p>
       <li>demo.html</li>
+    </div>
   </p>
 </div>
 </p>
