introducing background to my list

--- a/maongaIP.html
+++ b/maongaIP.html
@@ -10,10 +10,6 @@
     <li><a href="about.html" class="nav">About</a>
   </ul>
   <a href="Home" class="Home"></a>
-    <a href="works" class="My projects"> </a>
-<div class="Myprojects">
-  <a id="My projects">My projects</a>
-</div>
 </nav>
 </h3>
   <div class="Home" id="Home">
@@ -49,10 +45,11 @@
      development. </p>
      <p><span style="color:blue">My Hobbies:</span> Drawing, planting flowers, photography.</p>
    </div>
+ </div>
+</div>
    <div>
      <a href="#My projects"></a>
      <p>
-      <a href="#My projects">My projects</a>
     <div class="enoch">
       <img src="IMG_20200204_192814.jpg" alt="painting" style="width:100%">
     </div>
@@ -65,18 +62,22 @@
     <div class="enoch">
       <img src="IMG_20200204_192156.jpg" alt="painting" style="width:100%">
     </div>
+  </div>
     <div class="list">
+      <h3>
       <ol>
-        <li><span style="color:blue">:Maongalp.html</span></li>
-        This is all about me.
-        <p> link:https://github.com/enochmaonga/enochmaonga/blob/main/maongalp.html</p>
-        <li><span style="color:blue">:Eswa group.html</span></li>
+      <li><span style="color:blue">:Maongalp.html</span></li>
+      This is all about me.
+      <p> link:https://github.com/enochmaonga/enochmaonga/blob/main/maongalp.html</p>
+      <li><span style="color:blue">:Eswa group.html</span></li>
       Some group website
       <p> link:https://github.com/enochmaonga/enochmaonga/blob/main/Eswa%20Group.html</p>
-      <li>myfirst webpage.html</li>
+      <li><span style="color:blue">:Myfirst webpage.html</span></li>
       This is my very first webpage. Created in October 2020.
       <p>link: https://github.com/enochmaonga/my-projects/blob/main/my%20first%20webpage.html</p>
-      <li>demo.html</li>
+      <li><span style="color:blue">:Demo.html</span></li>
+      link: https://github.com/enochmaonga/enochmaonga/blob/main/demo.html
+    </h3>
     </div>
   </p>
 </div>
