--- a/maongaIP.html
+++ b/maongaIP.html
@@ -64,7 +64,8 @@
     </div>
   </div>
     <div class="list">
-      <h3>
+      <h2> <ul>My Web Projects</l></h2>
+      <h4>
       <ol>
       <li><span style="color:blue">:Maongalp.html</span></li>
       This is all about me.
@@ -77,7 +78,7 @@
       <p>link: https://github.com/enochmaonga/my-projects/blob/main/my%20first%20webpage.html</p>
       <li><span style="color:blue">:Demo.html</span></li>
       link: https://github.com/enochmaonga/enochmaonga/blob/main/demo.html
-    </h3>
+    </h4>
     </div>
   </p>
 </div>
