--- a/maongaIP.html
+++ b/maongaIP.html
@@ -42,7 +42,7 @@
    <p>I have interracted with most creative and design techniques, Mostly with
      pencil work, print, painting, ceramics and system based tools like;
      Illustrator,photoshop, Adobe indesign and currently working on Software
-     development. </p>
+     development.</p> <p>Below are some of my artworks.</p>
      <p><span style="color:blue">My Hobbies:</span> Drawing, planting flowers, photography.</p>
    </div>
  </div>
@@ -65,20 +65,21 @@
   </div>
     <div class="list">
       <h2> <ul>My Web Projects</l></h2>
-      <h4>
+      <h5>
       <ol>
       <li><span style="color:blue">:Maongalp.html</span></li>
-      This is all about me.
+      This is all about me. This project is build purely on html and css.
       <p> link:https://github.com/enochmaonga/enochmaonga/blob/main/maongalp.html</p>
       <li><span style="color:blue">:Eswa group.html</span></li>
-      Some group website
+      Some group website. Html and CSS are the main languages used here.
       <p> link:https://github.com/enochmaonga/enochmaonga/blob/main/Eswa%20Group.html</p>
       <li><span style="color:blue">:Myfirst webpage.html</span></li>
-      This is my very first webpage. Created in October 2020.
+      This is my very first webpage. Created in October 2020. This project is build on html and css languages.
       <p>link: https://github.com/enochmaonga/my-projects/blob/main/my%20first%20webpage.html</p>
       <li><span style="color:blue">:Demo.html</span></li>
-      link: https://github.com/enochmaonga/enochmaonga/blob/main/demo.html
-    </h4>
+      This project is build on html and css languages.
+      <p>link: https://github.com/enochmaonga/enochmaonga/blob/main/demo.html
+    </h5>
     </div>
   </p>
 </div>
