--- a/maongaIP.html
+++ b/maongaIP.html
@@ -84,7 +84,7 @@
   </p>
 </div>
 </p>
-  <div class="Contacts">
+  <div class="Contacts-txt center">
     <h4>
       ________________________________________________________________________________________________________________________________________________________________________
 
